# WorkoutApp

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  apply_migration.py  docker-compose.prod.yml  docker-compose.yml  main.py  makefile  manage.py  prometheus.args  prometheus.yml  pyproject.toml  requirements.txt  reset_database.py  test_connectivity.sh
gateway/: Dockerfile  pyproject.toml
gateway/api_gateway.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gateway/gateway_app/: auth_service.py  exercise_schemas.py  http_client.py  logging_config.py  main.py  schemas.py
gateway/gateway_app/routes/: agent.py  analytics.py  crm.py  exercises.py  plans.py  rpe.py  sessions.py  user_max.py  workouts.py
services/accounts-service/: Dockerfile  alembic.ini  pyproject.toml
services/accounts-service/accounts_service/: __init__.py  database.py  db.py  dependencies.py  deps.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  services.py  settings.py
services/accounts-service/accounts_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/accounts-service/accounts_service/routers/: __init__.py  accounts.py  avatars.py  invitations.py  notes.py  profile.py  tags.py  users.py
services/accounts-service/accounts_service/services/: profile_service.py  users_service.py
services/accounts-service/alembic/: env.py
services/accounts-service/alembic/versions/: 20251116_init_accounts_models.py  20251122_add_coaching_profiles.py  20251123_display_name_not_null.py  20251123_make_profiles_public.py  20251123_restore_accounts_user_tables.py  20251208_add_stripe_connect_to_coaching_profiles.py  8b57bf954ef7_accounts_update_models.py
services/agent-service/: Dockerfile  pyproject.toml
services/agent-service/agent_service/: celery_app.py  config.py  dependencies.py  logging_config.py  main.py  metrics.py  models.py
services/agent-service/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/agent-service/agent_service/prompts/: 1.md  __init__.py  avatars.py  conversation.py  mass_edit.py  plan_analysis.py  simple_chat.py  staged_plan.py  tool_agent.py
services/agent-service/agent_service/routers/: avatars.py  plan_mass_edit.py  training_plans.py
services/agent-service/agent_service/schemas/: mass_edit.py  plan_analysis.py  task_responses.py  training_plans.py  user_data.py
services/agent-service/agent_service/services/: coach_athlete_analysis.py  coach_portfolio_analysis.py  conversation_graph.py  entity_resolver.py  event_dispatcher.py  generated_plan_storage.py  history_analysis.py  langchain_runtime.py  llm_wrapper.py  macros_analysis.py  macros_manager.py  mass_edit.py  message_command_parser.py  message_handlers.py  plan_analysis.py  plan_generation.py  plans_service.py  rpe_rpc.py  screen_tools_builder.py  simple_chat.py  tool_agent.py  tool_result_dispatcher.py  user_max_analysis.py
services/agent-service/agent_service/tasks/: __init__.py  mass_edit_tasks.py  plan_tasks.py
services/agent-service/alembic/: env.py
services/agent-service/alembic/versions/: 0001_create_generated_plans_table.py  2025_10_12_add_user_id_to_generated_plans.py  2025_10_28_add_user_avatars.py
services/coach-service/: Dockerfile  alembic.ini  pyproject.toml
services/coach-service/alembic/: env.py
services/coach-service/alembic/versions/: 0001_init.py
services/coach-service/coach_service/: database.py  deps.py  main.py  models.py  schemas.py  services.py
services/coach-service/coach_service/routers/: accounts.py  invitations.py  notes.py  tags.py
services/crm-service/: Dockerfile  alembic.ini  pyproject.toml
services/crm-service/alembic/: env.py
services/crm-service/crm_service/: config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py
services/exercises-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/exercises-service/alembic/: env.py  script.py.mako
services/exercises-service/exercises_service/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py  models.py  muscle_metadata.json  redis_client.py  schemas.py  seed_exercises.json
services/exercises-service/exercises_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/exercises-service/tests/: conftest.py  test_exercise_instances_crud.py  test_health_and_seed.py
services/plans-service/: Dockerfile  pyproject.toml
services/plans-service/alembic/: env.py
services/plans-service/plans_service/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py  models.py  redis_client.py  rpc.py  schemas.py  workout_calculation.py
services/plans-service/plans_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/plans-service/tests/: conftest.py  test_applied_plans.py  test_calendar_plans.py  test_instances.py
services/rpe-service/: Dockerfile  pyproject.toml  rpe_pr.py  rpe_table.json
services/rpe-service/rpe_service/: calculation.py  config.py  main.py  rpc.py  rpe_calculations.py  schemas.py
services/user-max-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run_migrations.sh
services/user-max-service/alembic/: env.py
services/user-max-service/tests/: conftest.py  test_user_max.py
services/user-max-service/user_max_service/: database.py  dependencies.py  main.py  models.py  schemas.py
services/user-max-service/user_max_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/workouts-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/workouts-service/alembic/: env.py
services/workouts-service/tests/: conftest.py  test_sessions.py  test_workouts.py
services/workouts-service/workouts_service/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  metrics.py  models.py  redis_client.py  schemas.py  workout_calculation.py
services/workouts-service/workouts_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+509 files in other folders)
