[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workoutapp"
version = "0.1.0"
description = "Workout App Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.28",
    "pydantic==2.6.3",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.18",
    "typing-extensions==4.10.0",
    "alembic==1.13.1",
    "requests>=2.32.4",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
]

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "app" }

[tool.alembic]
script_location = "alembic"
sqlalchemy.url = "${DATABASE_URL}"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "flutter_app",
    "grafana",
    "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/alembic/versions/*.py" = ["E501", "F401", "F841"]
"services/workouts-service/workouts_service/schemas/__init__.py" = ["F401"]
"services/plans-service/plans_service/models/__init__.py" = ["F401"]
"services/plans-service/plans_service/schemas/__init__.py" = ["F401"]
