[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway"
version = "0.1.0"
description = "WorkoutApp API Gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "httpx==0.27.0",
    "firebase-admin>=6.0.0,<7.0.0",
]

[tool.setuptools]
packages = ["gateway_app"]
package-dir = { "" = "." }
