[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway"
version = "0.1.0"
description = "WorkoutApp API Gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "httpx==0.27.0",
    "firebase-admin>=6.0.0,<7.0.0",
    "structlog>=24.0.0,<25.0.0",
    "asgi-correlation-id>=4.3.1,<5.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "redis>=5",
]

[tool.setuptools]
packages = ["gateway_app"]
package-dir = { "" = "." }
