[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accounts-service"
version = "0.1.0"
description = "Accounts service for WorkoutApp (users, coach-client links, basic CRM)."
authors = [{ name = "WorkoutApp" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["accounts_service"]
