[tool.poetry]
name = "agent-service"
version = "0.1.0"
description = "WorkoutApp agent service with chat capabilities"
authors = ["WorkoutApp Team"]
packages = [
  { include = "agent_service" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.110.0"
uvicorn = { version = "0.30.0", extras = ["standard"] }
httpx = "0.28.1"
pydantic = "2.10.0"
sqlalchemy = "2.0.29"
langchain = "0.3.0"
langchain-community = "0.3.0"
psycopg2-binary = "2.9.9"
alembic = "1.15.0"
pydantic-ai = "0.0.15"
langchain-google-genai = "*"
google-genai = "1.42.0"
json5 = "0.9.25"
huggingface_hub = "0.25.0"
pillow = "10.0.0"
google-auth = ">=2.36.0,<3.0.0"
structlog = ">=24.0.0,<25.0.0"
asgi-correlation-id = "4.3.1"
prometheus-fastapi-instrumentator = "6.1.0"
prometheus-client = "0.16.0"
sentry-sdk = { version = "2.0.0", extras = ["fastapi"] }
celery = { version = "5.4.0", extras = ["redis"] }
redis = "5.0.0"
backend-common = { path = "../../libs/backend-common", develop = true }

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
