[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coach-service"
version = "0.1.0"
description = "Coach-service for coach-client relationships, tags, notes, invitations."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.0",
  "pydantic==2.7.1",
  "SQLAlchemy==2.0.29",
  "alembic==1.13.1",
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
]

[tool.setuptools]
packages = ["coach_service"]
package-dir = {"" = "."}
