[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-service"
version = "0.1.0"
description = "CRM service for coach-athlete relationships and organizations"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "SQLAlchemy==2.0.27",
    "asyncpg>=0.27",
    "alembic==1.13.1",
    "psycopg2-binary>=2.9",
    "httpx==0.28.1",
    "structlog>=24.0.0,<25.0.0",
    "asgi-correlation-id>=4.3.1,<5.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["crm_service"]
package-dir = { "" = "." }
