[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exercises-service"
version = "0.1.0"
description = "Exercises CRUD Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "SQLAlchemy==2.0.27",
    "alembic==1.13.1",
    # Needed for starlette.testclient under FastAPI tests
    "httpx==0.27.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9",
    "aiosqlite"
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["exercises_service"]
package-dir = { "" = "." }
