[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exercises-service"
version = "0.1.0"
description = "Exercises CRUD Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.2",
    "httpx>=0.27",  # Added for making HTTP requests
    "tenacity>=8.3",  # Added for retry functionality
    "asyncpg>=0.30",  # Added for async PostgreSQL support
    "structlog>=24.0.0,<25.0.0",
    "asgi-correlation-id>=4.3.1,<5.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "redis>=5",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["exercises_service"]
package-dir = { "" = "." }
