[project]
name = "plans-service"
version = "0.1.0"
description = "Calendar plans microservice"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plans_service"]
package-dir = { "" = "." }
