[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpe-service"
version = "0.1.0"
description = "RPE Calculation Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "pydantic-settings==2.1.0",
    "pydantic-settings==2.1.0",
    "httpx==0.27.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
]

[tool.setuptools]
packages = ["rpe_service"]
package-dir = { "" = "." }
