[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-max-service"
version = "0.1.0"
description = "User Max CRUD Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "SQLAlchemy==2.0.27",
    "alembic==1.13.1",
    "httpx==0.27.0",
    "psycopg2-binary>=2.9",
    "google-genai>=1.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["user_max_service"]
package-dir = { "" = "." }
