[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workouts-service"
version = "0.1.0"
description = "Workouts CRUD Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "SQLAlchemy==2.0.27",
    "alembic==1.13.1",
    "httpx==0.27.0",
    "asyncpg",
    "psycopg2-binary>=2.9",
    "tenacity",
    "pytz>=2024.1",  # Added for timezone conversion
]

[project.optional-dependencies]
test = [
  "pytest==8.2.0",
]

[tool.setuptools]
packages = ["workouts_service"]
package-dir = { "" = "." }
