[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workouts-service"
version = "0.1.0"
description = "Workouts CRUD Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "pydantic-settings>=2.2",
    "SQLAlchemy==2.0.27",
    "alembic==1.13.1",
    "httpx==0.27.0",
    "asyncpg",
    "psycopg2-binary>=2.9",
    "tenacity",
    "pytz>=2024.1",  # Added for timezone conversion
    "structlog>=24.0.0,<25.0.0",
    "asgi-correlation-id>=4.3.1,<5.0.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "redis>=5",
    "celery[redis]>=5.4.0,<6.0.0",
    "backend-common @ file:../../libs/backend-common",
]

[project.optional-dependencies]
test = [
  "pytest==8.2.0",
]

[tool.setuptools]
packages = ["workouts_service"]
package-dir = { "" = "." }
